fiyat tablosunu resimler eklendi
fiyat tablosunu resimler eklendi

--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -324,7 +324,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         olan Kurumsal E-Mail Sunucu Hizmeti kurumsallaşmış profesyonel işletmelerin tercihidir. Üstelik 7x24 Premium Support Pack ile GoMail mühendisleri her zaman yanınızda.</p>
                                     <div class="pricing-tables">
                                         <ul class="pricing-table">
-                                            <li class="title">Bronze</li>
+                                            <li class="title">Bronze </br><img width= "70" src="assets/img/t-shirt.png" alt="Toplu E-Mail Özllikleri"></li>
                                             <li class="price">389,00 $</li>
                                             <li>2 Core CPU</li>
                                             <li>4 GB RAM</li>
@@ -334,7 +334,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <li class="cta-button"><a href="#" class="btn btn-red">Satın Al</a></li>
                                         </ul>
                                         <ul class="pricing-table pop-out">
-                                            <li class="title">Silver</li>
+                                            <li class="title">Silver </br><img width= "70" src="assets/img/shirt.png" alt="Toplu E-Mail Özllikleri"></li>
                                             <li class="price">789,00 $</li>
                                             <li>4 Core CPU</li>
                                             <li>6 GB RAM</li>
@@ -344,7 +344,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <li class="cta-button"><a href="#" class="btn btn-red">Satın Al</a></li>
                                         </ul>
                                         <ul class="pricing-table">
-                                            <li class="title">Gold</li>
+                                            <li class="title">Gold </br><img width= "70" src="assets/img/suit.png" alt="Toplu E-Mail Özllikleri"></li>
                                             <li class="price">1.389,00 $</li>
                                             <li>4 Core CPU</li>
                                             <li>8 GB RAM</li>
