kurumsal mail hizmetleri sayfasında içerik değişiklikleri
kurumsal mail hizmetleri sayfasında içerik değişiklikleri

--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -459,7 +459,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h1>Hangi E-Mail Uygulamalarını Kullanabilirim?</h1>
                         <p>GoMail Kurumsal Mail Servisi platform ve uygulamadan bağımsız olarak çalışır. İster cep telefonu ister masaüstü bilgisayarınızda dilediğiniz E-Mail uygulamasını kullanabilirsiniz. Outlook, Apple Mail, Thunderbird, BlueMail vb. uygulamaları kullanabilirsiniz.</p>
                     </div>
-
+                    <!-- item -->
+                    <div class="yardimItem">
+                        <h1>E-Maillerimi Başka Bir E-Mail adresine Arşivleyebilir miyim??</h1>
+                        <p>Tabi ki! GoMail Outbox Arşivleme özelliği sayesinde gelen ve giden tüm e-maillerinizi sahip olduğunuz ikinci bir posta kutusuna yedekleyebilirsiniz.</p>
+                    </div>
+                    <!-- item -->
+                    <div class="yardimItem">
+                        <h1>Gelen Herhangi Bir E-Mailin Belirleyeceğim Kurallara Göre Bir Grup vey Adrese Yönlendirilmesini Sağlayabilir miyim?</h1>
+                        <p>Elbette, gelen e-mailleri tanımlayacağınız kurallara göre herhangi bir gruba veya posta kutusuna yönlendirmeniz mümkündür.</p>
+                    </div>
 
                 </div>
 
