--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -324,7 +324,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         olan Kurumsal E-Mail Sunucu Hizmeti kurumsallaşmış profesyonel işletmelerin tercihidir. Üstelik 7x24 Premium Support Pack ile GoMail mühendisleri her zaman yanınızda.</p>
                                     <div class="pricing-tables">
                                         <ul class="pricing-table">
-                                            <li class="title">Bronze </br><img width= "70" src="assets/img/t-shirt.png" alt="Toplu E-Mail Özllikleri"></li>
+                                            <li class="title">Basic </br><img width= "70" src="assets/img/t-shirt.png" alt="Toplu E-Mail Özllikleri"></li>
                                             <li class="price">389,00 $</li>
                                             <li>2 Core CPU</li>
                                             <li>4 GB RAM</li>
@@ -334,7 +334,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <li class="cta-button"><a href="#" class="btn btn-red">Satın Al</a></li>
                                         </ul>
                                         <ul class="pricing-table pop-out">
-                                            <li class="title">Silver </br><img width= "70" src="assets/img/shirt.png" alt="Toplu E-Mail Özllikleri"></li>
+                                            <li class="title">Business </br><img width= "70" src="assets/img/shirt.png" alt="Toplu E-Mail Özllikleri"></li>
                                             <li class="price">789,00 $</li>
                                             <li>4 Core CPU</li>
                                             <li>6 GB RAM</li>
@@ -344,7 +344,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <li class="cta-button"><a href="#" class="btn btn-red">Satın Al</a></li>
                                         </ul>
                                         <ul class="pricing-table">
-                                            <li class="title">Gold </br><img width= "70" src="assets/img/suit.png" alt="Toplu E-Mail Özllikleri"></li>
+                                            <li class="title">Professional </br><img width= "70" src="assets/img/suit.png" alt="Toplu E-Mail Özllikleri"></li>
                                             <li class="price">1.389,00 $</li>
                                             <li>4 Core CPU</li>
                                             <li>8 GB RAM</li>
@@ -354,6 +354,78 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <li class="cta-button"><a href="#" class="btn btn-red">Satın Al</a></li>
                                         </ul>
                                     </div>
+
+                                    <!-- Button trigger modal-->
+<div class="text-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCart">Launch modal</button></div>
+
+<!-- Modal: modalCart -->
+<div class="modal fade" id="modalCart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <!--Header-->
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Your cart</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body">
+
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Product name</th>
+              <th>Price</th>
+              <th>Remove</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Product 1</td>
+              <td>100$</td>
+              <td><a><i class="fas fa-times"></i></a></td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Product 2</td>
+              <td>100$</td>
+              <td><a><i class="fas fa-times"></i></a></td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Product 3</td>
+              <td>100$</td>
+              <td><a><i class="fas fa-times"></i></a></td>
+            </tr>
+            <tr>
+              <th scope="row">4</th>
+              <td>Product 4</td>
+              <td>100$</td>
+              <td><a><i class="fas fa-times"></i></a></td>
+            </tr>
+            <tr class="total">
+              <th scope="row">5</th>
+              <td>Total</td>
+              <td>400$</td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+      <!--Footer-->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Close</button>
+        <button class="btn btn-primary">Checkout</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal: modalCart -->
                                 </div>
                                 <div class="cozum-ozellik col-md-4">
                                     <div class="cozum-ozellik-content">
@@ -382,7 +454,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- end #cozumler -->
-
 
                 </div>
             </div>
