tablo hizzalamaları yapıldı ve buton aşağı kaydırıldı
tablo hizalamaları yapıldı ve buton aşağı kaydırıldı

--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -416,8 +416,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="priceContent">
                                     <div class="priceTitle">
                                         <div class="pUPacket">Paket</div>
-                                        <div class="pUYears">Aylık Abonelik</div>
-                                        <div class="pUKDV">Gönderdiğin Kadar Öde</div>
+                                        <div class="pUSubscriber">Aylık Abonelik</div>
+                                        <div class="pUAmount">Gönderdiğin Kadar Öde</div>
                                     </div>
                                     <!-- item -->
                                     <div class="priceItem">
@@ -426,19 +426,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
                                             </div>
                                         </div>
-                                        <div class="pUYears"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUKDV"><span>Herbir Kullanıcı İçin</span></div>
-                                    </div>
-                                    <!-- end item -->
-                                    <!-- item -->
-                                    <div class="priceItem">
-                                        <div class="pUPacket">
-                                            <div class="pUPacketTop">
-                                                <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
-                                            </div>
-                                        </div>
-                                        <div class="pUYears"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUKDV"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
@@ -448,8 +437,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
                                             </div>
                                         </div>
-                                        <div class="pUYears"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUKDV"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
@@ -459,8 +448,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
                                             </div>
                                         </div>
-                                        <div class="pUYears"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUKDV"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
@@ -470,8 +459,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
                                             </div>
                                         </div>
-                                        <div class="pUYears"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUKDV"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
@@ -481,8 +470,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
                                             </div>
                                         </div>
-                                        <div class="pUYears"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUKDV"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
+                                    </div>
+                                    <!-- end item -->
+                                    <!-- item -->
+                                    <div class="priceItem">
+                                        <div class="pUPacket">
+                                            <div class="pUPacketTop">
+                                                <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
+                                            </div>
+                                        </div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
                                     </div>
                                     <!-- end item -->
                                 </div>
