--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -347,13 +347,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <li>250 GB Disk</li>
                                             <li class="cta-button"><a href="#" class="btn btn-red">Satın Al</a></li>
                                         </ul>
-										
+
 
                                     </div>
 
-<<<<<<< HEAD
                                     <!-- Button trigger modal-->
-<div class="text-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCart">Özellikleri Karşılaştır</button></div>
+<div class="text-center"><button style="margin:35px" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCart">Özellikleri Karşılaştır</button></div>
 
 <!-- Modal: modalCart -->
 <div class="modal fade" id="modalCart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -509,12 +508,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </div>
 <!-- Modal: modalCart -->
-=======
-                             <div class="text-center"><button style="margin:35px" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCart">Detayları gör</button></div>
-
-
-
->>>>>>> 9dcc206ebf2535cac3c543000687726b393770e2
                                 </div>
                                 <div class="cozum-ozellik col-md-4">
                                     <div class="cozum-ozellik-content">
@@ -639,7 +632,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     </div>
     <!-- end #page-body  -->
-	
+
 	<!-- Modal: modalCart -->
 <div class="modal fade" id="modalCart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
