--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -381,120 +381,120 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <tbody>
             <tr>
               <th scope="row">7x24 Premium Support Pack</th>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
 
             <tr>
               <th scope="row">MX Backup</th>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Catch-All Özelliği</th>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">AntiSpam ve Antivirus</th>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
 
             <tr>
               <th scope="row">Ücretsiz E-Mail Aktarımı</th>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Esnek Arttırılabilir Depolama Alanı</th>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
 
             <tr>
               <th scope="row">Ücretsiz SSL Sertifikası</th>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Outbox Arşivleme</th>
-              <td><a><i class="fa fa-minus"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:red" class="fa fa-minus"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Kural Yönetimi</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Grup Oluşturma, Alias Tanımlama</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Sınırsız Domain</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Sınırsız Kullanıcı</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">POP3 ve SMTP Desteği</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Gelişmiş WebMail</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Mobil Cihazlarla Tam Uyumlu</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Ücretsiz E-Mail Sertifikası</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Firewall ve Ddos Atak Önleme</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Domain Akreditasyon ve İtibar Yönetimi</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
               <th scope="row">Günlük Yedekleme (Opsiyonel)</th>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
-              <td><a><i class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
+              <td><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
           </tbody>
         </table>
