Toplu Mail Fiyatlar Sayfası
Kıyaslama Tablosu İçerik Girişleri

--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -427,62 +427,62 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             </div>
                                         </div>
                                         <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUAmount"><i class="fa fa-times" aria-hidden="true"></i></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
                                     <div class="priceItem">
                                         <div class="pUPacket">
                                             <div class="pUPacketTop">
-                                                <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
+                                                <div class="pUFullName">E-Mail Şablon Tasarım Desteği</div>
                                             </div>
                                         </div>
                                         <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
                                     <div class="priceItem">
                                         <div class="pUPacket">
                                             <div class="pUPacketTop">
-                                                <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
+                                                <div class="pUFullName">E-Mail Adres Doğrulama</div>
                                             </div>
                                         </div>
                                         <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
                                     <div class="priceItem">
                                         <div class="pUPacket">
                                             <div class="pUPacketTop">
-                                                <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
+                                                <div class="pUFullName">Anket Yönetimi</div>
                                             </div>
                                         </div>
                                         <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
                                     <div class="priceItem">
                                         <div class="pUPacket">
                                             <div class="pUPacketTop">
-                                                <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
+                                                <div class="pUFullName">Domain Akreditasyonu</div>
                                             </div>
                                         </div>
                                         <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
                                     <div class="priceItem">
                                         <div class="pUPacket">
                                             <div class="pUPacketTop">
-                                                <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
+                                                <div class="pUFullName">Aktif Link Takibi</div>
                                             </div>
                                         </div>
                                         <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><span>Herbir Kullanıcı İçin</span></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
                                     </div>
                                     <!-- end item -->
                                 </div>
